--- a/css/general.css
+++ b/css/general.css
@@ -99,3 +99,56 @@
   overflow-y: auto;
   max-height: 400px;
 }
+#bootstrap-theme .act-feed-item {
+  border-radius: 2px;
+  cursor: pointer;
+  padding: 10px 15px;
+}
+#bootstrap-theme .act-feed-item.act-category-milestone {
+  border-bottom: 1px solid #ddd;
+  border-left: 5px solid;
+  border-right: 5px solid;
+  border-top: 1px solid #ddd;
+}
+#bootstrap-theme .act-feed-item .act-subject {
+  color: #727E8A;
+  display: inline-block;
+  font-size: 13px;
+  font-weight: 600;
+  line-height: 18px;
+  margin-right: 1em;
+  max-width: 70%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+#bootstrap-theme .act-feed-item.activity-overdue {
+  border-left-color: #E6807F !important;
+  border-right-color: #E6807F !important;
+}
+#bootstrap-theme .act-feed-item.activity-overdue .cb-dot {
+  background: #E6807F !important;
+}
+#bootstrap-theme .case-activity-card-wrapper .btn {
+  border: none;
+}
+#bootstrap-theme .act-category-task .act-feed-inner {
+  padding-left: 5em;
+}
+#bootstrap-theme .case-activity-card-wrapper .act-feed-inner {
+  border-left: 1px solid #ddd;
+}
+#bootstrap-theme .act-category-milestone .act-feed-inner {
+  border-left: none;
+}
+#bootstrap-theme .act-task-checkbox {
+  color: #586277;
+  cursor: pointer;
+  font-size: 1.5em;
+  left: 34px;
+  position: absolute;
+  top: -6px;
+}
+#bootstrap-theme .act-task-checkbox:hover i {
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+}
